# Timer-App

./: CMakeLists.txt  countdowntimer.cpp  countdowntimer.h  countdowntimer.ui  main.cpp  style.qss
.github/workflows/: qt6-build.yml
UnitTests/: Tests.cpp  Tests.h
